--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-table": "^8.11.6",
     "@types/node": "20.11.0",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
+    "async-mutex": "^0.4.0",
     "autoprefixer": "10.4.16",
+    "dotenv": "^16.3.1",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
-    "next": "14.0.4",
+    "eslint-config-next": "13.5.6",
+    "js-cookie": "^3.0.5",
+    "next": "13.5.6",
+    "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
